--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid" ui-view>
+<div class="container" ui-view>
 {{test}}
 </div> <!-- /container -->
 
@@ -58,6 +58,7 @@
 <script src="scripts/app.js"></script>
 <!-- Controllers -->
 <script src="scripts/controllers/login.ctrl.js"></script>
+<script src="scripts/controllers/base.ctrl.js"></script>
 <script src="scripts/controllers/home.ctrl.js"></script>
 <script src="scripts/controllers/user.ctrl.js"></script>
 <script src="scripts/controllers/message.ctrl.js"></script>
