--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="home">Home</a></li>
                     <li><a ui-sref="home.message">Message</a></li>
-                    <li><a ui-sref="home.users">Users</a></li>
+                    <li><a ui-sref="home.payments">Payments</a></li>
                     <li><a ng-href="#" ng-click="logout()">Logout</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
