--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li><a ui-sref="home">Home</a></li>
                     <li><a ui-sref="home.message">Message</a></li>
                     <li><a ui-sref="home.payments">Payments</a></li>
+                    <li><a ui-sref="home.statistics">Statistics</a></li>
                     <li><a ng-href="#" ng-click="logout()">Logout</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -60,7 +61,7 @@
 <script src="scripts/controllers/login.ctrl.js"></script>
 <script src="scripts/controllers/base.ctrl.js"></script>
 <script src="scripts/controllers/home.ctrl.js"></script>
-<script src="scripts/controllers/user.ctrl.js"></script>
+<script src="scripts/controllers/pay.ctrl.js"></script>
 <script src="scripts/controllers/message.ctrl.js"></script>
 <script src="scripts/controllers/stat.ctrl.js"></script>
 <!-- Services -->
