update PCI view, PCI controller

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li><a ui-sref="home.message">Message</a></li>
                     <li><a ui-sref="home.payments">Payments</a></li>
                     <li><a ui-sref="home.statistics">Statistics</a></li>
+                    <li><a ui-sref="home.pci">App PCI</a></li>
                     <li><a ng-href="#" ng-click="logout()">Logout</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -64,6 +65,7 @@
 <script src="scripts/controllers/pay.ctrl.js"></script>
 <script src="scripts/controllers/message.ctrl.js"></script>
 <script src="scripts/controllers/stat.ctrl.js"></script>
+<script src="scripts/controllers/pci.ctrl.js"></script>
 <!-- Services -->
 <script src="scripts/services/authen.svs.js"></script>
 <script src="scripts/services/main.svs.js"></script>
